Итоговые готовые страницы

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ body {
   color: var(--accent-color);
 }
 
-.padding-container {
+.section {
   padding-top: 94px;
   padding-bottom: 94px;
 }
@@ -75,6 +75,20 @@ body {
   border: none;
   cursor: pointer;
   border-radius: 4px;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 /*---------END COMPONENTS---------*/
 
