--- a/css/styles.css
+++ b/css/styles.css
@@ -59,7 +59,7 @@ body {
   line-height: 1.17;
   text-align: center;
   letter-spacing: 0.03em;
-  padding-bottom: 50px;
+  margin-bottom: 50px;
 }
 
 .menu-link.current {
@@ -95,7 +95,7 @@ body {
 /*---------HEADER---------*/
 
 .header {
-  border: 1px solid #ececec;
+  border-bottom: 1px solid #ececec;
   padding-top: 24px;
   padding-bottom: 24px;
 }
@@ -132,6 +132,10 @@ body {
   margin-right: 50px;
 }
 
+.contacts-item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .menu-link {
   font-weight: 500;
   font-size: 14px;
@@ -139,35 +143,42 @@ body {
   letter-spacing: 0.02em;
   color: var(--main-color);
 }
+
 .menu-link:hover,
 .menu-link:focus {
   color: var(--accent-color);
 }
-.mail-link {
+
+.address-list {
   font-style: normal;
+}
+
+.mail-link {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
-  margin-right: 50px;
 }
+
 .mail-link:hover,
 .mail-link:focus {
   color: var(--accent-color);
 }
+
 .tel-link {
-  font-style: normal;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
 }
+
 .tel-link:hover,
 .tel-link:focus {
   color: var(--accent-color);
 }
+
 /*---------END HEADER---------*/
 
 /*---------HERO---------*/
@@ -205,14 +216,13 @@ body {
 
 /*---------BENEFITS---------*/
 
-.benefits-container {
+.benefits-section {
   padding-top: 94px;
   padding-bottom: 47px;
 }
 
 .benefits {
   display: flex;
-  align-items: center;
 }
 
 .benefits-item {
@@ -241,7 +251,7 @@ body {
 
 /*---------PORTFOLIO---------*/
 
-.portfolio-container {
+.portfolio-section {
   padding-top: 47px;
   padding-bottom: 94px;
 }
@@ -269,7 +279,6 @@ body {
 
 .team-list {
   display: flex;
-  align-items: center;
   margin-left: -30px;
   margin-top: -30px;
 }
@@ -384,6 +393,8 @@ body {
 .filter-btn:focus {
   color: var(--contrast-color);
   background-color: var(--accent-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-page-items {
@@ -401,6 +412,7 @@ body {
 .portfolio-page-card-dscr {
   background: var(--contrast-color);
   border: 1px solid #eeeeee;
+  border-top: none;
   padding: 20px 24px;
 }
 
