--- a/css/styles.css
+++ b/css/styles.css
@@ -284,7 +284,8 @@ body {
 }
 
 .team-item {
-  flex-basis: calc((100% - 120px) / 4);
+  /*  flex-basis: calc((100% - 120px) / 4);*/
+  flex-basis: calc(100% - 4) / 30px);
   margin-left: 30px;
   margin-top: 30px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
