--- a/css/styles.css
+++ b/css/styles.css
@@ -406,6 +406,8 @@ body {
 }
 
 .portfolio-page-item {
+  /*flex-basis: calc(100% - 3) / 30px);*/
+  flex-basis: calc((100% - 90px) / 3);
   margin-top: 30px;
   margin-left: 30px;
 }
